--- a/app/views/admin/pages/index.html.erb
+++ b/app/views/admin/pages/index.html.erb
@@ -1,4 +1,4 @@
-<h1>All Pages</h1>
+<h2>All Pages</h2>
 
 <table>
 	<tr>
@@ -11,9 +11,9 @@
 	<% @pages.each do |page| %>
 	  <tr>
 	  	<td><%= page.title %></td>
-	  	<td><%= link_to 'Show', page %></td>
+	  	<td><%= link_to 'Show', admin_page_path(page) %></td>
 	  	<td><%= link_to 'Edit', edit_admin_page_path(page) %></td>
-	  	<td><%= link_to 'Destroy', page, confirm: 'Are you sure you want to delete this page?', method: :delete %></td>
+	  	<td><%= link_to 'Destroy', admin_page_path(page), confirm: 'Are you sure you want to delete this page?', method: :delete %></td>
 	  </tr>
 	  <% end %>
 	</table>
