--- a/app/views/admin/pages/show.html.erb
+++ b/app/views/admin/pages/show.html.erb
@@ -1,9 +1,11 @@
-<h1>Page View</h1>
+<h2>Page View</h2>
 <p>
-	<h2>Title:</h2>
+	<h3>Title:</h3>
 	<%= @page.title %>
 </p>
 <p>
-	<h2>Content:</h2>
+	<h3>Content:</h3>
 	<%= @page.content %>
 </p>
+<br/>
+<%= link_to 'All Pages', admin_pages_path %>
