Move generation of clemsondancer's email address link into Helper
* Ensures the email address is consistent everywhere it's used, gives
  a central location to update it for the entire application.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,7 @@
           <h2>Contact Us</h2>
           <h4>Email us at: </h4>
           <ul>
-            <li><%= mail_to "clemsondancers@gmail.com" %></li>
+            <li><%= email_link %></li>
           </ul>
           <h4>Check us out on Facebook:</h4>
           <ul>
