Add MarkitUp! GUI Editor to form used when creating/editing a Page
* Provides a nice GUI interface with previews to help users create the
  content for their pages.
* Currently using the "simple" style, but we should modify it to suit
  the application.

--- a/app/views/admin/pages/_form.html.erb
+++ b/app/views/admin/pages/_form.html.erb
@@ -7,9 +7,12 @@
 		<br/>
 		<%= f.label :content %>
 		<br/>
-		<%= f.text_area :content %>
+		<%= f.text_area :content, :id => "page_content" %>
 		<br/>
 		<%= f.submit submit_message %>
 		<% end %>
 	</div>
 </div>
+<script>
+	$('#page_content').markItUp(mySettings);
+</script>
