--- a/app/views/layouts/superuser.html.erb
+++ b/app/views/layouts/superuser.html.erb
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title></title>
+  <title><%= @title %></title>
   <%= stylesheet_link_tag    "superuser", :media => "all" %>
   <%= javascript_include_tag "superuser" %>
   <%= csrf_meta_tags %>
 </head>
 <body>
-<h1><%= page_title(@title) %></h1>
-<% flash.each do |key, value| %>
-    <div class="flash <%= key %>"><%= value %></div>
-<%end%>
-<%= yield %>
+	<h1><%= @title %></h1>
+	<% flash.each do |key, value| %>
+    	<div class="flash <%= key %>"><%= value %></div>
+	<%end%>
+
+	<%= yield %>
 
 </body>
 </html>
