--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
         <% Page.all.each do | page | %>
           <li><%= link_to page.title, page.url %></li>
         <% end %>
-       	<li>Photo Gallery</li>
+       	<li><%= link_to 'Galleries', galleries_path %></li>
       </ul>
     </nav>
 
