Pages can now be marked as the index in the admin backend.

--- a/app/views/admin/pages/_form.html.erb
+++ b/app/views/admin/pages/_form.html.erb
@@ -3,7 +3,8 @@
 	<div class="form">
 		<%= form_for [:admin, page] do |f| %>
 		<%= f.label :title %>
-		<%= f.text_field :title %>
+		<%= f.text_field :title %><br>
+		<%= f.label :index, "Index Page:" %> <%= f.check_box :index %>
 		<br/>
 		<%= f.label :content %>
 		<br/>
