Styling updates to the creating/updating pages
* Change "Edit this page" to "update this page"
* show page preview under the text area
* change "Index page:" to "is home page?"

--- a/app/views/admin/pages/_form.html.erb
+++ b/app/views/admin/pages/_form.html.erb
@@ -4,7 +4,7 @@
 		<%= form_for [:admin, page] do |f| %>
 		<%= f.label :title %>
 		<%= f.text_field :title %><br>
-		<%= f.label :index, "Index Page:" %> <%= f.check_box :index %>
+		<%= f.check_box :index %> <%= f.label :index, "Is Home Page?" %>
 		<br/>
 		<%= f.label :content %>
 		<br/>
