--- a/app/views/admin/pages/_form.html.erb
+++ b/app/views/admin/pages/_form.html.erb
@@ -2,18 +2,18 @@
 <div class="row">
 	<div class="form">
 		<%= form_for [:admin, page] do |f| %>
-		<%= f.label :title %>
+		<%= f.label :title, "Page Title:" %>
 		<%= f.text_field :title %><br>
-		<%= f.check_box :index %> <%= f.label :index, "Is Home Page?" %>
-		<br/>
-		<%= f.label :content %>
-		<br/>
+		<%= f.check_box :index %> <%= f.label :index, "This is the home page." %><br/>
+		<%= f.label :content, "Page Content", :class => "hidden" %>
+		<%= f.submit submit_message %><br/>
 		<%= f.text_area :content, :id => "page_content" %>
-		<br/>
-		<%= f.submit submit_message %>
 		<% end %>
 	</div>
 </div>
 <script>
 	$('#page_content').markItUp(mySettings);
+	$(document).ready(function(){
+		$('a[title="Preview"]').trigger('mouseup');
+	})
 </script>
