--- a/app/views/admin/pages/index.html.erb
+++ b/app/views/admin/pages/index.html.erb
@@ -1,20 +1,25 @@
-<h2>All Pages</h2>
+<h2>Manage Pages (<%= link_to 'Create New Page', new_admin_page_path %>)</h2>
+
 
 <table>
-	<tr>
-		<th>Page Name</th>
-		<th></th>
-		<th></th>
-		<th></th>
-	</tr>
-
+	<thead>
+		<tr>
+			<th></th>
+			<th>Page Title</th>
+			<th></th>
+			<th></th>
+			<th></th>
+		</tr>
+	</thead>
+	<tbody>
 	<% @pages.each do |page| %>
 	  <tr>
+	  	<td id="home_page_flag"><%= page.index? ? "Home Page" : "" %></td>
 	  	<td><%= page.title %></td>
 	  	<td><%= link_to 'Show', admin_page_path(page) %></td>
 	  	<td><%= link_to 'Edit', edit_admin_page_path(page) %></td>
-	  	<td><%= link_to 'Destroy', admin_page_path(page), confirm: 'Are you sure you want to delete this page?', method: :delete %></td>
+	  	<td><%= link_to 'Delete', admin_page_path(page), confirm: 'Are you sure you want to delete this page?', method: :delete %></td>
 	  </tr>
-	  <% end %>
+  <% end %>
+	</tbody>
 	</table>
-	<%= link_to 'New Page', new_admin_page_path %>
