Clean up markup for Pages views, copy edits, make generic metadata ID

--- a/app/assets/stylesheets/admin.css
+++ b/app/assets/stylesheets/admin.css
@@ -56,7 +56,7 @@ td{
   padding-bottom: 3px;
 }
 
-#page_metadata{
+#metadata{
   border-bottom: 2px dotted black;
   background: #E4E4E4;
   padding: 3px;
