--- a/app/views/admin/pages/new.html.erb
+++ b/app/views/admin/pages/new.html.erb
@@ -1,3 +1,3 @@
 <h2>Create Page</h2>
 
-<%= render 'form', :page => @page, :submit_message => "Make this page"%>
+<%= render 'form', :page => @page, :submit_message => "Create this page"%>
