--- a/app/views/admin/pages/show.html.erb
+++ b/app/views/admin/pages/show.html.erb
@@ -1,4 +1,4 @@
-<div id="page_metadata">
+<div id="metadata">
   <h3>Page Title: <%= @page.title %></h3>
   <p><%= link_to "Edit Page", edit_admin_page_path(@page) %><p>
   <h4>Page Content:</h4>
