Ensure page URLs are based on the root of the site.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
 		<nav>
       <ul>
         <% Page.all.each do | page | %>
-          <li><%= link_to page.title, page.url %></li>
+          <li><%= link_to page.title, '/' + page.url %></li>
         <% end %>
         <% if Gallery.count > 0 %>
        	  <li><%= link_to 'Galleries', galleries_path %></li>
