--- a/app/views/galleries/show.html.erb
+++ b/app/views/galleries/show.html.erb
@@ -1,9 +1,1 @@
-<ul>
-	<% for image in @gallery.images %>  
-  	<li> <%= image_tag(image.url, :alt => image.description)%> 
-  	<p>
-  		 <%= h image.description %>
-  	</p>
-  	</li>  
-  <% end %>
-</ul>
+<%= render 'gallery', :gallery => @gallery %>
