--- a/app/views/admin/galleries/index.html.erb
+++ b/app/views/admin/galleries/index.html.erb
@@ -1,13 +1,16 @@
-<h2>All Galleries</h2>
+<h2>All Galleries (<%= link_to 'Create New Gallery', new_admin_gallery_path %>)</h2>
 
 <table>
-	<tr>
-		<th>Gallery Name</th>
-		<th></th>
-		<th></th>
-		<th></th>
-	</tr>
+	<thead>
+		<tr>
+			<th>Gallery Name</th>
+			<th></th>
+			<th></th>
+			<th></th>
+		</tr>
+	</thead>
 
+	<tbody>
 	<% @galleries.each do |gallery| %>
 	  <tr>
 	  	<td><%= gallery.title %></td>
@@ -15,6 +18,6 @@
 	  	<td><%= link_to 'Edit', edit_admin_gallery_path(gallery) %></td>
 	  	<td><%= link_to 'Destroy', admin_gallery_path(gallery), confirm: 'Are you sure you want to delete this gallery?', method: :delete %></td>
 	  </tr>
-	  <% end %>
+  <% end %>
+	</tbody>
 	</table>
-	<%= link_to 'New Gallery', new_admin_gallery_path %>
