--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
 
 		<nav>
       <ul>
-        <% Page.all.each do | page | %>
+        <% Page.ordered.each do | page | %>
           <li><%= link_to page.title, '/' + page.url %></li>
         <% end %>
         <% if Gallery.count > 0 %>
