fixing iframes to only take up 100% of their container

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -120,6 +120,10 @@ nav ul li {
   min-height:600px;
 }
 
+#content iframe{
+  max-width: 100%;
+}
+
 #contact ul{
   list-style: none;
   padding:0px;
